# itsk

./: README.md
tasks/: Задача 4.docx  Задача теор.docx
well_regression/: CMakeLists.txt  main.cpp  test.sh  well_math.cpp  well_math.hpp  well_storage.cpp  well_storage.hpp
well_regression/data/: plot  well_data.txt
well_regression/doc/: Задача 3 С++.docx  Копия приложение к задаче 3.xlsb
